#7 - Fixed background image issue on mobile menu

--- a/.vuepress/styles/global.scss
+++ b/.vuepress/styles/global.scss
@@ -38,7 +38,7 @@ img {
     }
 
     .content-wrapper {
-      min-height: calc(100vh - #{$expected-header-height} - #{$expected-footer-height - 10});
+      min-height: calc(100vh - #{$header-height} - #{$expected-footer-height - 10});
     }
   }
 }
@@ -49,7 +49,7 @@ img {
   padding-bottom: $space-unit;
   padding-left: $space-unit;
   max-width: 960px;
-  min-height: calc(100vh - #{$expected-header-height} - #{$expected-footer-height});
+  min-height: calc(100vh - #{$header-height} - #{$expected-footer-height});
   margin: 0 auto;
 
   .language-text code {
